<resources>
    <string name="app_name">PicShelf</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="feedback">Feedback</string>
    <string name="support_developer">Support Developer</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish</string>
    <string name="leave_app">Leave App?</string>
    <string name="no_frame">No Frame</string>
    <string name="polaroid">Polaroid</string>
    <string name="basic_frame">Default</string>
    <string name="select">SELECT</string>
    <string name="my_shelf">My Shelf</string>
    <string name="no_history">No Widgets.\nYou can add a Picshelf widget to your phone\'s home screen.\nTouch and hold an empty area on your home screen</string>
    <string name="msg_permission">Storage Permission Required</string>
    <string name="msg_permission_denied">You can reset permissions at [Settings]-[Application]</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="load_new_picture">LOAD NEW PICTURE</string>
    <string name="edit_frame">Edit Frame</string>
</resources>
